# The-Effect-of-Packet-Buffer-Size-and-Packet-Priority-on-Bursty-Real-Time-Traffic

experiment_configs/: 11hardlimitatsomelatencyloss.ssv  12hardlimitatnolatencyloss.ssv  17hardlimitatfulllatencylossiecprioritizednosvloss.ssv  18hardlimitatfulllatencylossiecprioritizedsvloss.ssv  19hardlimitatfulllatencylossiecprioritizednosvlossmoreippackets.ssv  1noqueuedelay.ssv  3maxqueuedelay.ssv  4maxipqueuedelay.ssv  9hardlimitatfulllatencyloss.ssv  iecloss.ssv  iecnoloss.ssv  larger.ssv  largerfull.ssv  onlyip.ssv  onlysv.ssv
measurements/: 01nodelay.csv  01nodelay.meta2  02-03delay.csv  02-03delay.meta2  04-maxipqueuedelay.csv  04-maxipqueuedelay.meta2  09-hardlimitatfulllatencyloss.csv  09-hardlimitatfulllatencyloss.meta2  11-hardlimitatsomelatencyloss.csv  11-hardlimitatsomelatencyloss.meta2  12-hardlimitatnolatencyloss.csv  12-hardlimitatnolatencyloss.meta2  17-hardlimitatfulllatencyiecprionosvloss.csv  17-hardlimitatfulllatencyiecprionosvloss.meta2  18-hardlimitatfulllatencyiecpriosvloss.csv  18-hardlimitatfulllatencyiecpriosvloss.meta2  19-iecprioloss-2.csv  19-iecprioloss-2.meta2  20-iecprioloss-3.csv  20-iecprioloss-3.meta2  21-iecprioloss-4.csv  21-iecprioloss-4.meta2  22-iecprioloss-5.csv  22-iecprioloss-5.meta2  23-iecprioloss-6.csv  23-iecprioloss-6.meta2  24-iecprioloss-7.csv  24-iecprioloss-7.meta2
program/: .clang-tidy  CMakeLists.txt  client.cpp  common.hpp  laptopchangevlan1priority.sh  pichangevlan1priority.sh  plotter.py  readme.md  server.cpp  shell.nix  theoretical_plots.py
